Change library name

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <script src="./dist/mavenGeography.js"></script>
   </head>
   <body>
-    <script>console.log(mavenGeography.isContinent('greece','europe'))</script>
+    <script>console.log(_mG.isContinent('greece','europe'))</script>
   </body>
 </html>
