--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <script src="./dist/mavenGeography.js"></script>
   </head>
   <body>
-    <script>console.log(mavenGeo.getCurrencyCode('greece'))</script>
+    <script>console.log(mavenGeo.getNameShort('greece'))</script>
   </body>
 </html>
